- Updated m68k specs file in /documentation to contain an own __CLIB2__
  define so that existing m68k compilers also have this define. In addition,
  the common "-noixemul" option can now also be specified but will do a NOP
  so that Makefiles sharing multiple runtime lib setups work without
  a warning.

- Added a new callback function which can be used in programs which want
  to avoid that the command line wildcard expansion takes place.  

- __get_default_file() now dynamically fills in file handles for the
  stdin/stdout/stderr streams if it's part of the thread-safe library.

- fpathconf() now checks if the file descriptor is really referring to a file.

- The termios hook entry code could file descriptor's embedded file handle
  rather than what the thread safe library had dynamically bound to the
  stdin/stdout/stderr streams.

- execve() now finds commands in the current directory again, even if you
  omit the leading "./" path name.

- The execve() code that looks for the command/script file now begins by
  checking if the file name includes path separators. If it does not,
  then the search for the command begins with the resident command list;
  otherwise the local directories are checked. The new code also properly
  cleans up after itself (a FreeDeviceProc() was missing) and the "PROGDIR:"
  lock now always refers to the directory in which the command/script
  file is found.

- Added the missing fdim() and fdimf() functions to the build
  makefiles. The OS4 build makefile was missing lrint() and
  lrintf(). Ouch.

- Added the POSIX exec() family functions, based upon code contributed
  by Henning Nielsen Lund. Thank you very much!

- atoll() no longer sets 'errno' directly but now calls __set_errno()
  instead.

- Added pathconf(), fpathconf(), sysinfo(), ftime(), ulimit(), getrlimit()
  and setrlimit() as contributed by Peter Bengtsson. Thank you very much!

- Added the missing S_ISSOCKET() macro to <sys/stat.h>. Note that this